--- a/index.html
+++ b/index.html
@@ -12,31 +12,21 @@
     </header>
 
     <main>
-        <section id="backgroundKaartjeSection">
-            <section id="kaartjeSectionheader">
-                <section class="kaartjeTim" id="kaartjeSection">
-                    <nav>
-                        <ul>
-                            <li>
-                                <button id="textLetterT">T</button>
-                            </li>
-                            <li>
-                                <button id="textLetterI">I</button>
-                            </li>
-                            <li>
-                                <button id="textLetterM">M</button>
-                            </li>
-                        </ul>
-                        <p class="InfoOverTim" id="infoOverTim">Beweeg me!</p>
-                    </nav>
-                    <div class="streepRechtsBoven"></div>
-                    <div class="streepRechtsOnder"></div>
-                    <div class="streepLinksBoven"></div>
-                    <div class="streepLinksOnder"></div>
-                </section>
-                <section class="kaartjeTimBackup1" id="Kaartjebackup1"></section>
-                <section class="kaartjeTimBackup2" id="Kaartjebackup2"></section>
-                <section class="kaartjeTimBackup3" id="Kaartjebackup3"></section>
+        <section id="backgroundKaartjeTimSection" class="test">
+            <section id="kaartjeTimSectionheader">
+                <img src="images/timFoto.png" alt="">
+            </section>
+        </section>
+
+        <section id="backgroundKaartjeJodySection" class="test">
+            <section id="kaartjeJodySectionheader">
+                <img src="images/jodyFoto.png" alt="">
+            </section>
+        </section>
+
+        <section id="backgroundKaartjeMartijnSection" class="test">
+            <section id="kaartjeMartijnSectionheader">
+                <img src="images/martijnFoto.png" alt="">
             </section>
         </section>
     </main>
