--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     </header>
 
     <main>
-        <section id="backgroundKaartjeTimSection" class="test">
+        <section id="backgroundKaartjeTimSection" class="fotoContainer backgroundKaartjeTimSection">
             <section id="kaartjeTimSectionheader">
                 <img src="images/timFoto.png" alt="">
             </section>
         </section>
 
-        <section id="backgroundKaartjeJodySection" class="test">
+        <section id="backgroundKaartjeJodySection" class="fotoContainer backgroundKaartjeJodySection">
             <section id="kaartjeJodySectionheader">
                 <img src="images/jodyFoto.png" alt="">
             </section>
         </section>
 
-        <section id="backgroundKaartjeMartijnSection" class="test">
+        <section id="backgroundKaartjeMartijnSection" class="fotoContainer backgroundKaartjeMartijnSection">
             <section id="kaartjeMartijnSectionheader">
                 <img src="images/martijnFoto.png" alt="">
             </section>
