--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
     </header>
 
     <main>
-        <section id="backgroundKaartjeTimSection" class="fotoContainer backgroundKaartjeTimSection">
+        <img src="./images/betrokkenen.png" alt="betrokkenen">
+        <img src="./images/verdachten.png" alt="verdachten">
+        <section id="backgroundKaartjeTimSection" class="fotoContainer">
             <section id="kaartjeTimSectionheader">
                 <img src="images/timFoto.png" alt="">
             </section>
         </section>
 
-        <section id="backgroundKaartjeJodySection" class="fotoContainer backgroundKaartjeJodySection">
+        <section id="backgroundKaartjeJodySection" class="fotoContainer">
             <section id="kaartjeJodySectionheader">
                 <img src="images/jodyFoto.png" alt="">
             </section>
         </section>
 
-        <section id="backgroundKaartjeMartijnSection" class="fotoContainer backgroundKaartjeMartijnSection">
+        <section id="backgroundKaartjeMartijnSection" class="fotoContainer">
             <section id="kaartjeMartijnSectionheader">
                 <img src="images/martijnFoto.png" alt="">
             </section>
