--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     </header>
 
     <main>
-        <img src="./images/betrokkenen.png" alt="betrokkenen">
-        <img src="./images/verdachten.png" alt="verdachten">
+        <img src="./images/betrokkenen.png" alt="betrokkenen" class="betrokkenen">
+        <img src="./images/verdachten.png" alt="verdachten" class="verdachten">
+
+        <img src="./images/huilen.png" alt="team logo huilen team 3" class="teamlogo">
+
         <section id="backgroundKaartjeTimSection" class="fotoContainer">
             <section id="kaartjeTimSectionheader">
                 <img src="images/timFoto.png" alt="">
