--- a/index.html
+++ b/index.html
@@ -20,18 +20,33 @@
         <section id="backgroundKaartjeTimSection" class="fotoContainer">
             <section id="kaartjeTimSectionheader">
                 <img src="images/timFoto.png" alt="">
+                <a href="#">
+                    <button>
+                        <img src="images/knoppie.png" alt="">
+                    </button>
+                </a>
             </section>
         </section>
 
         <section id="backgroundKaartjeJodySection" class="fotoContainer">
             <section id="kaartjeJodySectionheader">
                 <img src="images/jodyFoto.png" alt="">
+                <a href="#">
+                    <button>
+                        <img src="images/knoppie.png" alt="">
+                    </button>
+                </a>
             </section>
         </section>
 
         <section id="backgroundKaartjeMartijnSection" class="fotoContainer">
             <section id="kaartjeMartijnSectionheader">
                 <img src="images/martijnFoto.png" alt="">
+                <a href="#">
+                    <button>
+                        <img src="images/knoppie.png" alt="">
+                    </button>
+                </a>
             </section>
         </section>
     </main>
