added kaartje tim

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section id="backgroundKaartjeTimSection" class="fotoContainer">
             <section id="kaartjeTimSectionheader">
                 <img src="images/timFoto.png" alt="">
-                <a href="#">
+                <a href="tim/index.html">
                     <button>
                         <img src="images/knoppie.png" alt="">
                     </button>
