--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section id="backgroundKaartjeTimSection" class="fotoContainer">
             <section id="kaartjeTimSectionheader">
                 <img src="images/timFoto.png" alt="">
-                <a href="tim/index.html">
+                <a href="tim/index.html" target="_blank">
                     <button>
                         <img src="images/knoppie.png" alt="">
                     </button>
@@ -31,7 +31,7 @@
         <section id="backgroundKaartjeJodySection" class="fotoContainer">
             <section id="kaartjeJodySectionheader">
                 <img src="images/jodyFoto.png" alt="">
-                <a href="#">
+                <a href="jody/index.html" target="_blank">
                     <button>
                         <img src="images/knoppie.png" alt="">
                     </button>
@@ -42,7 +42,7 @@
         <section id="backgroundKaartjeMartijnSection" class="fotoContainer">
             <section id="kaartjeMartijnSectionheader">
                 <img src="images/martijnFoto.png" alt="">
-                <a href="#">
+                <a href="#" target="_blank">
                     <button>
                         <img src="images/knoppie.png" alt="">
                     </button>
