Link martijn aangepast

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section id="backgroundKaartjeMartijnSection" class="fotoContainer">
             <section id="kaartjeMartijnSectionheader">
                 <img src="images/martijnFoto.png" alt="">
-                <a href="#" target="_blank">
+                <a href="https://martijnvdlans.github.io/web-app-from-scratch-2122/index.html" target="_blank">
                     <button>
                         <img src="images/knoppie.png" alt="">
                     </button>
