--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     </header>
 
     <main>
-        <img src="./images/betrokkenen.png" alt="betrokkenen" class="betrokkenen">
-        <img src="./images/verdachten.png" alt="verdachten" class="verdachten">
-
-        <img src="./images/huilen.png" alt="team logo huilen team 3" class="teamlogo">
+        <section>
+            <img src="./images/betrokkenen.png" alt="betrokkenen" class="betrokkenen">
+            <img src="./images/verdachten.png" alt="verdachten" class="verdachten">
+            <img src="./images/huilen.png" alt="team logo huilen team 3" class="teamlogo">
+        </section>
 
         <section id="backgroundKaartjeTimSection" class="fotoContainer">
             <section id="kaartjeTimSectionheader">
